feature. minor fixes for creating application
